kubernetes/frontendproxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-proxy
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
        # ssl certificate
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:528035863673:certificate/45a2cb02-4608-44bb-9072-e64d9a651b52

    # force https redirect
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  ingressClassName: alb
  rules:
    - host: ravikantgupta.khatunaresh.online
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: opentelemetry-demo-frontendproxy
                port:
                  number: 8080
